--- a/tests/Makefile
+++ b/tests/Makefile
@@ -78,7 +78,7 @@ $(BUILD_DIR)/%.o: %.$(SRC_EXT) $(GTEST_HEADERS)
 	@$(CXX) $(CPPFLAGS) -MM -MT "$@" "$<"  > "$(@:.o=.d)"
 	$(V)$(CXX) -c $< -o $@ $(CXXFLAGS)
 
-# src/usql/parser/sql.tab.hpp: src/usql/parser/sql.yy
+src/usql/parser/sql.tab.hpp: src/usql/parser/sql.yy
 parser: src/usql/parser/sql.tab.$(SRC_EXT) src/usql/parser/sql.yy.$(SRC_EXT)
 
 src/usql/parser/sql.tab.$(SRC_EXT): src/usql/parser/sql.yy
@@ -96,6 +96,8 @@ $(TARGET): $(OBJS) $(BUILD_DIR)/gtest_main.a
 
 clean:
 	rm -rf $(BUILD_DIR)/src $(TARGET)
+	rm -rf src/usql/parser/sql.tab.$(SRC_EXT)
+	rm -rf src/usql/parser/sql.yy.$(SRC_EXT)
 
 clean-full:
 	rm -rf $(BUILD_DIR) $(TARGET)
